Fixed the mosparo logo in the frontend box (#190) The mosparo logo is not visible (when enabled) if the operating system or the browser forces the colors (`forced-colors: active`).
With the added fix, we replace the logo in these situations (`forced-colors: active`, and either prefers-color-scheme: light` or `refers-color-schema: dark`) with a predefined white or black logo and remove the opacity to make the logo better visible.

--- a/assets/scss/mosparo-frontend.scss
+++ b/assets/scss/mosparo-frontend.scss
@@ -150,6 +150,22 @@
             mask: url('../images/mosparo_text_logo.svg') no-repeat center;
 
             background: var(--mosparo-text-color, rgb(0, 0, 0));
+
+            forced-color-adjust: none;
+
+            @media (forced-colors: active) {
+                @media (prefers-color-scheme: light) {
+                    -webkit-mask-image: url('../images/mosparo_text_logo.svg#fc=1&pcs=l');
+                    mask-image: url('../images/mosparo_text_logo.svg#fc=1&pcs=l');
+                    background: #000000;
+                }
+
+                @media (prefers-color-scheme: dark) {
+                    -webkit-mask-image: url('../images/mosparo_text_logo.svg#fc=1&pcs=d');
+                    mask-image: url('../images/mosparo_text_logo.svg#fc=1&pcs=d');
+                    background: #FFFFFF;
+                }
+            }
         }
     }
 
